Refactor session handling