@@ -39,8 +39,6 @@ import ch.ethz.sis.openbis.generic.dssapi.v3.IDataStoreServerApi;
 import ch.ethz.sis.openbis.generic.dssapi.v3.dto.datasetfile.DataSetFile;
 import ch.ethz.sis.openbis.generic.dssapi.v3.dto.datasetfile.fetchoptions.DataSetFileFetchOptions;
 import ch.ethz.sis.openbis.generic.dssapi.v3.dto.datasetfile.search.DataSetFileSearchCriteria;
-import java.security.KeyStore;
-import java.security.KeyStoreException;
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 import java.util.ArrayList;
@@ -74,8 +72,9 @@ import life.qbic.projectmanagement.domain.model.sample.SampleCode;
 import life.qbic.projectmanagement.infrastructure.experiment.measurement.MeasurementDataRepo;
 import life.qbic.projectmanagement.infrastructure.project.QbicProjectDataRepo;
 import life.qbic.projectmanagement.infrastructure.sample.SampleDataRepository;
-import life.qbic.projectmanagement.infrastructure.sample.openbis.OpenbisSessionFactory.ApiV3;
-import life.qbic.projectmanagement.infrastructure.sample.openbis.OpenbisSessionFactory.OpenBisSession;
+import life.qbic.projectmanagement.infrastructure.sample.openbis.OpenbisSession.ApiV3;
+import org.springframework.beans.factory.DisposableBean;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
@@ -86,7 +85,7 @@ import org.springframework.stereotype.Component;
  */
 @Component
 public class OpenbisConnector implements QbicProjectDataRepo, SampleDataRepository,
-    MeasurementDataRepo, RawDataLookup, DataRepoConnectionTester {
+    MeasurementDataRepo, RawDataLookup, DataRepoConnectionTester, DisposableBean {
 
   private static final Logger log = logger(OpenbisConnector.class);
 
@@ -97,23 +96,20 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
   private static final String DEFAULT_DELETION_REASON = "Commanded by data manager app";
   private static final String NGS_MEASUREMENT_TYPE_CODE = "Q_NGS_MEASUREMENT";
   private static final String PROTEOMICS_MEASUREMENT_TYPE_CODE = "Q_PROTEOMICS_MEASUREMENT";
-  private final OpenbisSessionFactory sessionFactory;
   private final IApplicationServerApi applicationServer;
   private final IDataStoreServerApi datastoreServer;
-
-  private final KeyStore keyStore;
+  private final OpenbisSession openBisSession;
 
   // used by spring to wire it up
-  private OpenbisConnector(@Value("${openbis.user.name}") String userName,
-      @Value("${openbis.user.password}") String password,
+  private OpenbisConnector(
       @Value("${openbis.datasource.as.url}") String asUrl,
-      @Value("${openbis.datasource.dss.url}") String dssUrl) throws KeyStoreException {
-    keyStore = KeyStore.getInstance("pkcs12");
+      @Value("${openbis.datasource.dss.url}") String dssUrl,
+      @Autowired VaultConfig vaultConfig) {
 
     final String openbisApplicationUrl = asUrl + IApplicationServerApi.SERVICE_URL;
     final String openbisDssUrl = dssUrl + IDataStoreServerApi.SERVICE_URL;
 
-    this.sessionFactory = new OpenbisSessionFactory(openbisApplicationUrl, userName, password);
+    this.openBisSession = new OpenbisSession(vaultConfig.vault(), openbisApplicationUrl);
     this.applicationServer = ApiV3.applicationServer(openbisApplicationUrl);
     this.datastoreServer = ApiV3.dataStoreServer(openbisDssUrl);
   }
@@ -165,11 +161,10 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     return sampleFetchOptions;
   }
 
-  private List<Sample> searchSamplesByCodes(OpenBisSession session,
-      Collection<String> sampleCodes) {
+  private List<Sample> searchSamplesByCodes(Collection<String> sampleCodes) {
     SampleSearchCriteria criteria = new SampleSearchCriteria();
     criteria.withCodes().thatIn(new ArrayList<>(sampleCodes));
-    return applicationServer.searchSamples(session.getToken(), criteria,
+    return applicationServer.searchSamples(this.openBisSession.getToken(), criteria,
         fetchSamplesCompletely()).getObjects();
   }
 
@@ -178,11 +173,9 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     ExperimentSearchCriteria criteria = new ExperimentSearchCriteria();
     criteria.withProject().withCode().thatEquals(projectCode);
 
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      SearchResult<Experiment> searchResult =
-          applicationServer.searchExperiments(session.getToken(), criteria, fetchOptions);
-      return searchResult.getObjects();
-    }
+    SearchResult<Experiment> searchResult =
+        applicationServer.searchExperiments(openBisSession.getToken(), criteria, fetchOptions);
+    return searchResult.getObjects();
   }
 
   private List<ch.ethz.sis.openbis.generic.asapi.v3.dto.project.Project> searchProjectsByCode(
@@ -190,11 +183,10 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     ProjectSearchCriteria criteria = new ProjectSearchCriteria();
     criteria.withCode().thatEquals(code);
     ProjectFetchOptions options = new ProjectFetchOptions();
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      SearchResult<ch.ethz.sis.openbis.generic.asapi.v3.dto.project.Project> searchResult =
-          applicationServer.searchProjects(session.getToken(), criteria, options);
-      return searchResult.getObjects();
-    }
+    SearchResult<ch.ethz.sis.openbis.generic.asapi.v3.dto.project.Project> searchResult =
+        applicationServer.searchProjects(openBisSession.getToken(), criteria, options);
+    return searchResult.getObjects();
+
   }
 
   /**
@@ -215,27 +207,25 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     ExperimentIdentifier newExperimentID = new ExperimentIdentifier(DEFAULT_SPACE_CODE,
         projectCodeString, newExperimentCode);
 
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      try {
-        samples.forEach(sample -> {
-          SampleCreation sampleCreation = new SampleCreation();
-          sampleCreation.setCode(sample.sampleCode().code());
-          sampleCreation.setTypeId(new EntityTypePermId(DEFAULT_SAMPLE_TYPE));
-          sampleCreation.setSpaceId(new SpacePermId(DEFAULT_SPACE_CODE));
-          Map<String, String> props = new HashMap<>();
+    try {
+      samples.forEach(sample -> {
+        SampleCreation sampleCreation = new SampleCreation();
+        sampleCreation.setCode(sample.sampleCode().code());
+        sampleCreation.setTypeId(new EntityTypePermId(DEFAULT_SAMPLE_TYPE));
+        sampleCreation.setSpaceId(new SpacePermId(DEFAULT_SPACE_CODE));
+        Map<String, String> props = new HashMap<>();
 
-          props.put("Q_LABEL", sample.label());
-          props.put(EXTERNAL_ID_CODE, sample.sampleId().value());
-          sampleCreation.setProperties(props);
+        props.put("Q_LABEL", sample.label());
+        props.put(EXTERNAL_ID_CODE, sample.sampleId().value());
+        sampleCreation.setProperties(props);
 
-          sampleCreation.setExperimentId(newExperimentID);
-          samplesToRegister.add(sampleCreation);
-        });
-        createOpenbisSamples(session, samplesToRegister);
-      } catch (Exception e) {
-        deleteOpenbisExperiment(session, newExperimentID);
-        throw e;
-      }
+        sampleCreation.setExperimentId(newExperimentID);
+        samplesToRegister.add(sampleCreation);
+      });
+      createOpenbisSamples(this.openBisSession, samplesToRegister);
+    } catch (Exception e) {
+      deleteOpenbisExperiment(this.openBisSession, newExperimentID);
+      throw e;
     }
   }
 
@@ -262,7 +252,7 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     return lastNumberInt;
   }
 
-  private void createOpenbisSamples(OpenBisSession session,
+  private void createOpenbisSamples(OpenbisSession session,
       List<SampleCreation> samplesToRegister) {
     IOperation operation = new CreateSamplesOperation(samplesToRegister);
     handleOperations(session, operation);
@@ -275,11 +265,9 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
    * @param samplesToUpdate List of SampleUpdate objects containing changes to one or more samples
    */
   private void updateOpenbisSamples(List<SampleUpdate> samplesToUpdate) {
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      List<SampleUpdate> mutableUpdates = new ArrayList<>(samplesToUpdate);
-      IOperation operation = new UpdateSamplesOperation(mutableUpdates);
-      handleOperations(session, operation);
-    }
+    List<SampleUpdate> mutableUpdates = new ArrayList<>(samplesToUpdate);
+    IOperation operation = new UpdateSamplesOperation(mutableUpdates);
+    handleOperations(openBisSession, operation);
   }
 
   /**
@@ -292,30 +280,25 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
    */
   @Override
   public void deleteAll(ProjectCode projectCode, Collection<SampleCode> sampleCodes) {
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      List<Sample> samplesToDelete = searchSamplesByCodes(session, sampleCodes.stream()
-          .map(SampleCode::code).toList());
-      for (Sample sample : samplesToDelete) {
-        if (isSampleWithData(List.of(sample))) {
-          throw new SampleNotDeletedException(
-              "Did not delete sample " + sample.getCode() + ", because data is attached.");
-        }
+    List<Sample> samplesToDelete = searchSamplesByCodes(sampleCodes.stream()
+        .map(SampleCode::code).toList());
+    for (Sample sample : samplesToDelete) {
+      if (isSampleWithData(List.of(sample))) {
+        throw new SampleNotDeletedException(
+            "Did not delete sample " + sample.getCode() + ", because data is attached.");
       }
-      // no data found, we can safely delete all samples
-      sampleCodes.forEach(code -> deleteOpenbisSample(session, code.code()));
     }
+    // no data found, we can safely delete all samples
+    sampleCodes.forEach(code -> deleteOpenbisSample(openBisSession, code.code()));
   }
 
   @Override
   public boolean canDeleteSample(SampleCode codeToDelete) {
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      return canDeleteSampleObject(session, codeToDelete.code());
-    }
+    return canDeleteSampleObject(codeToDelete.code());
   }
 
-  private boolean canDeleteSampleObject(OpenBisSession session, String code) {
-    List<Sample> samplesToDelete = searchSamplesByCodes(session,
-        List.of(code));
+  private boolean canDeleteSampleObject(String code) {
+    List<Sample> samplesToDelete = searchSamplesByCodes(List.of(code));
     for (Sample sample : samplesToDelete) {
       if (isSampleWithData(List.of(sample))) {
         return false;
@@ -384,25 +367,22 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
   @Override
   public void saveAllNGS(
       Map<NGSMeasurement, Collection<SampleIdCodeEntry>> ngsMeasurementsMapping) {
+    var objectsToCreate = ngsMeasurementsMapping
+        .entrySet().stream()
+        .map(
+            entry -> {
+              NGSMeasurement measurement = entry.getKey();
+              Collection<SampleIdCodeEntry> sampleIdCodes = entry.getValue();
 
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      var objectsToCreate = ngsMeasurementsMapping
-          .entrySet().stream()
-          .map(
-              entry -> {
-                NGSMeasurement measurement = entry.getKey();
-                Collection<SampleIdCodeEntry> sampleIdCodes = entry.getValue();
-
-                List<String> parentCodes = sampleIdCodes.stream()
-                    .map(sampleEntry -> sampleEntry.sampleCode().code())
-                    .toList();
-                return prepareSampleCreation(NGS_MEASUREMENT_TYPE_CODE, session, parentCodes,
-                    measurement.measurementId(),
-                    measurement.measurementCode());
-              }
-          ).collect(Collectors.toCollection(ArrayList::new));
-      createOpenbisSamples(session, objectsToCreate);
-    }
+              List<String> parentCodes = sampleIdCodes.stream()
+                  .map(sampleEntry -> sampleEntry.sampleCode().code())
+                  .toList();
+              return prepareSampleCreation(NGS_MEASUREMENT_TYPE_CODE, openBisSession, parentCodes,
+                  measurement.measurementId(),
+                  measurement.measurementCode());
+            }
+        ).collect(Collectors.toCollection(ArrayList::new));
+    createOpenbisSamples(openBisSession, objectsToCreate);
   }
 
   @Override
@@ -417,46 +397,43 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
       MeasurementId measurementId, MeasurementCode measurementCode) {
     Map<String, String> metadata = new HashMap<>();
     metadata.put(EXTERNAL_ID_CODE, measurementId.value());
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      List<SampleIdentifier> parentIds = fetchSampleIdentifiers(session,
-          parentCodes.stream().map(SampleCode::code).toList());
-      String sampleCode = measurementCode.value();
-      SampleCreation sampleCreation = new SampleCreation();
-      sampleCreation.setCode(sampleCode);
-      sampleCreation.setParentIds(new ArrayList<>(parentIds));
-      sampleCreation.setTypeId(new EntityTypePermId(typeCode));
-      sampleCreation.setSpaceId(new SpacePermId(DEFAULT_SPACE_CODE));
-      sampleCreation.setProperties(metadata);
-      createOpenbisSamples(session, List.of(
-          sampleCreation));
-    }
+    List<SampleIdentifier> parentIds = fetchSampleIdentifiers(openBisSession,
+        parentCodes.stream().map(SampleCode::code).toList());
+    String sampleCode = measurementCode.value();
+    SampleCreation sampleCreation = new SampleCreation();
+    sampleCreation.setCode(sampleCode);
+    sampleCreation.setParentIds(new ArrayList<>(parentIds));
+    sampleCreation.setTypeId(new EntityTypePermId(typeCode));
+    sampleCreation.setSpaceId(new SpacePermId(DEFAULT_SPACE_CODE));
+    sampleCreation.setProperties(metadata);
+    createOpenbisSamples(openBisSession, List.of(
+        sampleCreation));
   }
 
   @Override
   public void saveAllProteomics(
       Map<ProteomicsMeasurement, Collection<SampleIdCodeEntry>> proteomicsMeasurementsMapping) {
 
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      List<SampleCreation> objectsToCreate = proteomicsMeasurementsMapping
-          .entrySet().stream()
-          .map(
-              entry -> {
-                ProteomicsMeasurement measurement = entry.getKey();
-                Collection<SampleIdCodeEntry> sampleIdCodes = entry.getValue();
+    List<SampleCreation> objectsToCreate = proteomicsMeasurementsMapping
+        .entrySet().stream()
+        .map(
+            entry -> {
+              ProteomicsMeasurement measurement = entry.getKey();
+              Collection<SampleIdCodeEntry> sampleIdCodes = entry.getValue();
 
-                List<String> parentCodes = sampleIdCodes.stream()
-                    .map(sampleEntry -> sampleEntry.sampleCode().code())
-                    .toList();
-                return prepareSampleCreation(PROTEOMICS_MEASUREMENT_TYPE_CODE, session, parentCodes,
-                    measurement.measurementId(),
-                    measurement.measurementCode());
-              }
-          ).collect(Collectors.toCollection(ArrayList::new));
-      createOpenbisSamples(session, objectsToCreate);
-    }
+              List<String> parentCodes = sampleIdCodes.stream()
+                  .map(sampleEntry -> sampleEntry.sampleCode().code())
+                  .toList();
+              return prepareSampleCreation(PROTEOMICS_MEASUREMENT_TYPE_CODE, openBisSession,
+                  parentCodes,
+                  measurement.measurementId(),
+                  measurement.measurementCode());
+            }
+        ).collect(Collectors.toCollection(ArrayList::new));
+    createOpenbisSamples(openBisSession, objectsToCreate);
   }
 
-  private SampleCreation prepareSampleCreation(String typeCode, OpenBisSession session,
+  private SampleCreation prepareSampleCreation(String typeCode, OpenbisSession session,
       List<String> parentCodes, MeasurementId measurementId, MeasurementCode measurementCode) {
     List<SampleIdentifier> parentIds = fetchSampleIdentifiers(session, parentCodes);
 
@@ -484,35 +461,31 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
   }
 
   private void deleteMeasurements(List<MeasurementCode> measurementCodes) {
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      for (MeasurementCode code : measurementCodes) {
-        String sampleCode = code.value();
-        // measurement has been deleted in JPA at this moment. We don't fail, but we keep data in
-        // openbis that might have been registered between the check and deletion
-        if (canDeleteSampleObject(session, sampleCode)) {
-          deleteOpenbisSample(session, sampleCode);
-        }
+    for (MeasurementCode code : measurementCodes) {
+      String sampleCode = code.value();
+      // measurement has been deleted in JPA at this moment. We don't fail, but we keep data in
+      // openbis that might have been registered between the check and deletion
+      if (canDeleteSampleObject(sampleCode)) {
+        deleteOpenbisSample(openBisSession, sampleCode);
       }
     }
   }
 
   @Override
   public boolean hasDataAttached(List<MeasurementCode> measurements) {
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      for (MeasurementCode code : measurements) {
-        List<Sample> samplesToDelete = searchSamplesByCodes(session,
-            new ArrayList<>(Arrays.asList(code.value())));
-        for (Sample sample : samplesToDelete) {
-          if (isSampleWithData(List.of(sample))) {
-            return true;
-          }
+    for (MeasurementCode code : measurements) {
+      List<Sample> samplesToDelete = searchSamplesByCodes(
+          new ArrayList<>(Arrays.asList(code.value())));
+      for (Sample sample : samplesToDelete) {
+        if (isSampleWithData(List.of(sample))) {
+          return true;
         }
       }
     }
     return false;
   }
 
-  private List<SampleIdentifier> fetchSampleIdentifiers(OpenBisSession session,
+  private List<SampleIdentifier> fetchSampleIdentifiers(OpenbisSession session,
       List<String> sampleCodes) {
     SampleSearchCriteria criteria = new SampleSearchCriteria();
     criteria.withCodes().thatIn(new ArrayList<>(sampleCodes));
@@ -530,9 +503,7 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     project.setSpaceId(new SpacePermId(spaceCodeString));
 
     IOperation operation = new CreateProjectsOperation(project);
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      handleOperations(session, operation);
-    }
+    handleOperations(openBisSession, operation);
   }
 
   private void createOpenbisExperiment(String spaceCode, String projectCode,
@@ -543,9 +514,8 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     experiment.setCode(experimentCode);
 
     IOperation operation = new CreateExperimentsOperation(experiment);
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      handleOperations(session, operation);
-    }
+
+    handleOperations(openBisSession, operation);
   }
 
   private void deleteOpenbisProject(String spaceCode, String projectCode) {
@@ -558,12 +528,10 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     openBisProjectsIds.add(projectIdentifier);
     DeleteProjectsOperation operation = new DeleteProjectsOperation(openBisProjectsIds,
         deletionOptions);
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      handleOperations(session, operation);
-    }
+    handleOperations(openBisSession, operation);
   }
 
-  private void deleteOpenbisSample(OpenBisSession session, String sampleCode) {
+  private void deleteOpenbisSample(OpenbisSession session, String sampleCode) {
     SampleDeletionOptions deletionOptions = new SampleDeletionOptions();
     deletionOptions.setReason(DEFAULT_DELETION_REASON);
     List<SampleIdentifier> openBisSampleIds = fetchSampleIdentifiers(session,
@@ -577,7 +545,7 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
         Collections.singletonList(deletionId));
   }
 
-  private void deleteOpenbisExperiment(OpenBisSession session,
+  private void deleteOpenbisExperiment(OpenbisSession session,
       ExperimentIdentifier experimentIdentifier) {
     ExperimentDeletionOptions deletionOptions = new ExperimentDeletionOptions();
     deletionOptions.setReason(DEFAULT_DELETION_REASON);
@@ -620,35 +588,34 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
       DataSetSearchCriteria filterCriteria = searchCriteria.withSubcriteria().withOrOperator();
       filterCriteria.withSample().withCode().thatContains(filter);
     }
-    try (OpenBisSession session = sessionFactory.getSession()) {
 
-      List<DataSet> searchResult = applicationServer.searchDataSets(
-          session.getToken(), searchCriteria,
-          fetchOptions).getObjects();
-      Map<String, List<DataSetFile>> fileInfos = fetchFileInformationForDatasets(session,
-          searchResult.stream().map(DataSet::getCode).toList());
-      for (DataSet dataset : searchResult) {
-        String datasetCode = dataset.getCode();
-        List<DataSetFile> dsFileInfos = fileInfos.get(datasetCode);
-        Date registrationDate = dataset.getRegistrationDate();
-        Set<String> suffixes = new HashSet<>();
-        long dataSetSize = 0;
-        int numOfFiles = 0;
-        for (DataSetFile file : dsFileInfos) {
-          if (!file.isDirectory()) {
-            numOfFiles++;
-            String path = file.getPath();
-            if (path.contains(".")) {
-              suffixes.add(path.substring(path.indexOf(".") + 1));
-            }
-            dataSetSize += file.getFileLength();
+    List<DataSet> searchResult = applicationServer.searchDataSets(
+        openBisSession.getToken(), searchCriteria,
+        fetchOptions).getObjects();
+    Map<String, List<DataSetFile>> fileInfos = fetchFileInformationForDatasets(openBisSession,
+        searchResult.stream().map(DataSet::getCode).toList());
+    for (DataSet dataset : searchResult) {
+      String datasetCode = dataset.getCode();
+      List<DataSetFile> dsFileInfos = fileInfos.get(datasetCode);
+      Date registrationDate = dataset.getRegistrationDate();
+      Set<String> suffixes = new HashSet<>();
+      long dataSetSize = 0;
+      int numOfFiles = 0;
+      for (DataSetFile file : dsFileInfos) {
+        if (!file.isDirectory()) {
+          numOfFiles++;
+          String path = file.getPath();
+          if (path.contains(".")) {
+            suffixes.add(path.substring(path.indexOf(".") + 1));
           }
+          dataSetSize += file.getFileLength();
         }
-        result.add(
-            new RawDataDatasetInformation(MeasurementCode.parse(dataset.getSample().getCode()),
-                getStringSizeLengthFile(dataSetSize), numOfFiles, suffixes, registrationDate));
       }
+      result.add(
+          new RawDataDatasetInformation(MeasurementCode.parse(dataset.getSample().getCode()),
+              getStringSizeLengthFile(dataSetSize), numOfFiles, suffixes, registrationDate));
     }
+
     return result;
   }
 
@@ -659,14 +626,12 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     List<String> codes = new ArrayList<>(
         measurementCodes.stream().map(MeasurementCode::value).toList());
     searchCriteria.withSample().withCodes().thatIn(codes);
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      return applicationServer.searchDataSets(
-          session.getToken(), searchCriteria,
-          fetchOptions).getObjects().size();
-    }
+    return applicationServer.searchDataSets(
+        openBisSession.getToken(), searchCriteria,
+        fetchOptions).getObjects().size();
   }
 
-  private Map<String, List<DataSetFile>> fetchFileInformationForDatasets(OpenBisSession session,
+  private Map<String, List<DataSetFile>> fetchFileInformationForDatasets(OpenbisSession session,
       List<String> datasetCodes) {
 
     Map<String, List<DataSetFile>> result = new HashMap<>();
@@ -689,7 +654,7 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
     return result;
   }
 
-  private void handleOperations(OpenBisSession session, IOperation operation) {
+  private void handleOperations(OpenbisSession session, IOperation operation) {
     SynchronousOperationExecutionOptions executionOptions = new SynchronousOperationExecutionOptions();
     List<IOperation> operationOptions = Collections.singletonList(operation);
     try {
@@ -726,12 +691,15 @@ public class OpenbisConnector implements QbicProjectDataRepo, SampleDataReposito
 
   @Override
   public void testApplicationServer() {
-    try (OpenBisSession session = sessionFactory.getSession()) {
-      if (!applicationServer.isSessionActive(session.getToken())) {
-        throw new ConnectionException("Could not connect to openBIS application server.");
-      }
-      log.info("Successfully tested connection to openBIS application server.");
+    if (!applicationServer.isSessionActive(openBisSession.getToken())) {
+      throw new ConnectionException("Could not connect to openBIS application server.");
     }
+    log.info("Successfully tested connection to openBIS application server.");
+  }
+
+  @Override
+  public void destroy() throws Exception {
+    openBisSession.logout();
   }
 
   // Convenience RTE to describe connection issues
